[package]
name = "sig_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
byteorder = "1.5.0"
clap = {version = "4.5.47", features = ["derive"]}
num-complex = "0.4.6"
polars = {version="0.43.0", features = ["lazy","csv"]}
serde = "1.0.224"
serde_json = "1.0.145"
walkdir = "2.5.0"

eframe = "0.32.3"
egui = "0.32.3"
egui_extras = { version= "0.32.3"}
egui_file = "0.23.1"

[[bin]]
name = "sig_viewer_cli"
path = "src/main.rs"

[[bin]]
name = "sig_viewer_gui"
path = "src/gui_main.rs"

[lib]
name = "sig_viewer"
path = "src/lib.rs"
